--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <h3 style="color: lightgreen;">Skills</h3>  <br>
           <br>
           <!-- <h6 style="color:lightgreen;text-align: justify;">Download <a href="#" class="button">MY CV!</a></h6> -->
-          <a href="my mod cv.pdf" download="pdf" id="downld" class="button">Download My CV!&emsp;<i class='far fa-handshake' style='font-size:18px'></i></a>
+          <a href="" download="pdf" id="downld" class="button">Download My CV!&emsp;<i class='far fa-handshake' style='font-size:18px'></i></a>
 <br><br>
           <img width="250px" height="300px" src="https://library.kissclipart.com/20180926/sgq/kissclipart-capabilities-icon-clipart-computer-icons-skill-f7c00e393f057a92.png" class="" alt="picture">
         </div>
