--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="_css/css.css" rel="stylesheet" type="text/css">
   <link href="_css/HOVER.CSS" rel="stylesheet" type="text/css">
   <link href="_css/load.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <script async>(function(w, d) { w.CollectId = "5e8c9b827a347f20caa876d9"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
 <body onload="myfun()" id="body" data-spy="scroll" data-target="#navigation" data-offset="30">
